# nss-to-parquet

./: .gitignore  COMMERCIAL_LICENSE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  audit-allowlist.txt  config.example.toml  config.test.toml  install.sh  pentest.md  schema.example.yaml  schema.zscaler_web_v2_ops.yaml
.github/workflows/: ci.yml  release-artifacts.yml
infra/aws/: README.md  main.tf  outputs.tf  terraform.tfvars.example  user_data.sh.tftpl  variables.tf
scripts/: backfill_11574_lps.sh  benchmark_ingest.py  run_audit.sh
src/: backfill.rs  config.rs  dlq.rs  durability.rs  main.rs  metrics.rs  parser.rs  retention.rs  schema.rs  schema_generator.rs  schema_profile.rs  server.rs  types.rs  writer.rs
