[package]
name = "nss-ingestor"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"

[dependencies]
anyhow = "1.0"
arrow-array = "58.1"
arrow-schema = "58.1"
axum = "0.8"
chrono = { version = "0.4.44", features = ["clock", "serde"] }
clap = { version = "4.6", features = ["derive"] }
csv = "1.3"
parquet = { version = "58.1", features = ["arrow", "zstd"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.44", features = ["full"] }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.13"
